--- a/index.html
+++ b/index.html
@@ -2,14 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js">
-    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/679772225c.js" crossorigin="anonymous"></script>    <link rel="stylesheet" href="css/style.css">
     <title>HubSpot | Inbound Marketing, Sales, and Service Software</title>
   </head>
   <body>
     <!-- barra search e login con position fixed -->
-    <nav>
-
+    <nav class="barra-login rientro">
+      <div class="nav-globe">
+        <a>
+          <i class="fas fa-globe-europe"></i>
+          English
+          <i class="fas fa-caret-down"></i>
+        </a>
+        <span>|</span>
+        <a>Contact Us</a>
+      </div>
+      <div class="nav-login">
+        <a><i class="fas fa-search"></i></a>
+        <a class="button">Log In</a>
+        <a class="button">GetHubspotFree</a>
+      </div>
     </nav>
     <!-- header con barra di navigazione pagine e jumbotron -->
     <header>
