barra nav login completa

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="nav-login">
         <a><i class="fas fa-search"></i></a>
-        <a class="button">Log In</a>
+        <a class="button" id="specialbutton">Log In</a>
         <a class="button">GetHubspotFree</a>
       </div>
     </nav>
