--- a/index.html
+++ b/index.html
@@ -26,8 +26,27 @@
     <!-- header con barra di navigazione pagine e jumbotron -->
     <header>
       <!-- barra di navigazione pagine -->
-      <nav>
-
+      <nav class="header-nav rientro">
+        <div class="logocontainer">
+          <img src="img/logo.svg" alt="logo">
+        </div>
+        <ul>
+          <li>
+            <a href="#">Software</a><i class="fas fa-caret-down"></i>
+          </li>
+          <li>
+            <a href="#">Pricing</a>
+          </li>
+          <li>
+            <a href="#">Resources</a><i class="fas fa-caret-down"></i>
+          </li>
+          <li>
+            <a href="#">Partners</a><i class="fas fa-caret-down"></i>
+          </li>
+          <li>
+            <a href="#">About</a><i class="fas fa-caret-down"></i>
+          </li>
+        </ul>
       </nav>
       <!-- jumbotron -->
       <div>
