un primo abbozzo di header. ancora da sistemare il testo

--- a/index.html
+++ b/index.html
@@ -49,8 +49,13 @@
         </ul>
       </nav>
       <!-- jumbotron -->
-      <div>
-
+      <div class="jumbotron rientro">
+        <div class="header-titolo">
+          <h1>There's a better way to grow.</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+          <a class="button" href="#">GetHubspotFree</a>
+          <div>Get started with FREE tools and upgrade as you grow.</div>    
+        </div>
       </div>
     </header>
     <main>
