completato header. aggiunti font e formattazione testo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span>|</span>
         <a>Contact Us</a>
       </div>
-      <div class="nav-login">
+      <div class="nav-bottoni">
         <a><i class="fas fa-search"></i></a>
         <a class="button" id="specialbutton">Log In</a>
         <a class="button">GetHubspotFree</a>
@@ -27,24 +27,26 @@
     <header>
       <!-- barra di navigazione pagine -->
       <nav class="header-nav rientro">
+        <!-- contenitore float a destra contenete il logo -->
         <div class="logocontainer">
           <img src="img/logo.svg" alt="logo">
         </div>
+        <!-- lista di link float a sinistra text align a destra -->
         <ul>
           <li>
-            <a href="#">Software</a><i class="fas fa-caret-down"></i>
+            <a href="#">Software<i class="fas fa-caret-down"></i></a>
           </li>
           <li>
             <a href="#">Pricing</a>
           </li>
           <li>
-            <a href="#">Resources</a><i class="fas fa-caret-down"></i>
+            <a href="#">Resources<i class="fas fa-caret-down"></i></a>
           </li>
           <li>
-            <a href="#">Partners</a><i class="fas fa-caret-down"></i>
+            <a href="#">Partners<i class="fas fa-caret-down"></i></a>
           </li>
           <li>
-            <a href="#">About</a><i class="fas fa-caret-down"></i>
+            <a href="#">About<i class="fas fa-caret-down"></i></a>
           </li>
         </ul>
       </nav>
@@ -54,7 +56,7 @@
           <h1>There's a better way to grow.</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
           <a class="button" href="#">GetHubspotFree</a>
-          <div>Get started with FREE tools and upgrade as you grow.</div>    
+          <div>Get started with FREE tools and upgrade as you grow.</div>
         </div>
       </div>
     </header>
