completata prima parte main

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h3>Free HubSpot CRM</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <div class="list-title">
-              <span>POPOLAR FEATURE</span>
+              <h4>POPOLAR FEATURE</h4>
               <hr>
             </div>
             <ul class="orange-list">
@@ -90,11 +90,48 @@
               <li><i class="fas fa-check-circle"></i>Task</li>
             </ul>
           </div>
-
         </div>
         <!-- 3 colonne -->
         <div class="row-two">
-
+          <div class="colonna30">
+            <img src="img/Marketing-Hub-Free.svg" alt="marketing">
+            <h3>Marketing Hub</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <hr>
+            <h4 class="list-title">Popolar Features</h4>
+            <ul class="orange-list">
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+            </ul>
+            <div class="button">Learn More</div>
+          </div>
+          <div class="colonna30">
+            <img src="img/Sales-Professional-Illustration.svg" alt="marketing">
+            <h3>Sales Hub</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <hr>
+            <h4 class="list-title">Popolar Features</h4>
+            <ul class="orange-list">
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+            </ul>
+            <div class="button">Learn More</div>
+          </div>
+          <div class="colonna30">
+            <img src="img/Service-Hub-Illustration.svg" alt="marketing">
+            <h3>Service Hub</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <hr>
+            <h4 class="list-title">Popolar Features</h4>
+            <ul class="orange-list">
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+            </ul>
+            <div class="button">Learn More</div>
+          </div>
         </div>
       </section>
       <!-- sezione learn and grow con un intestazione e una griglia di dati -->
