seconda parte del main

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h2>Powerful Alone. Better Together</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
-        <!-- una colonna -->
+        <!-- prima riga divisa in due colonne una con immagine e bottone l'altra con titolo testo e piccola lista puntata -->
         <div class="row-one">
           <div class="left">
             <img src="img/CRM-Illustration.svg" alt="CRM">
@@ -91,13 +91,12 @@
             </ul>
           </div>
         </div>
-        <!-- 3 colonne -->
+        <!-- seconda riga con 3 blocchetti ognuno con immagine titolo testo e lista -->
         <div class="row-two">
           <div class="colonna30">
             <img src="img/Marketing-Hub-Free.svg" alt="marketing">
             <h3>Marketing Hub</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <hr>
             <h4 class="list-title">Popolar Features</h4>
             <ul class="orange-list">
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
@@ -109,8 +108,7 @@
           <div class="colonna30">
             <img src="img/Sales-Professional-Illustration.svg" alt="marketing">
             <h3>Sales Hub</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <hr>
+            <p>Lorem ipsum dolor quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <h4 class="list-title">Popolar Features</h4>
             <ul class="orange-list">
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
@@ -123,7 +121,6 @@
             <img src="img/Service-Hub-Illustration.svg" alt="marketing">
             <h3>Service Hub</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <hr>
             <h4 class="list-title">Popolar Features</h4>
             <ul class="orange-list">
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
@@ -135,14 +132,58 @@
         </div>
       </section>
       <!-- sezione learn and grow con un intestazione e una griglia di dati -->
-      <section>
+      <section class="main-second rientro">
         <!-- intestazione -->
-        <div>
-
+        <div class="main-second-intestazione">
+          <h2>Learn and grow with award-winning support and thriving community behind you.</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         </div>
         <!-- griglia di dati 2 righe per 4 colonne -->
-        <div>
-
+        <div class="table">
+          <div class="table-row-one">
+            <div class="table-colonna25">
+              <img src="img\homepage_community_agency.svg" alt="agency">
+              <div class="number">150+</div>
+              <div class="bottom-text">HubSpot User Group</div>
+            </div>
+            <div class="table-colonna25">
+              <img src="img\homepage_community_blog.svg" alt="blog">
+              <div class="number">10M+</div>
+              <div class="bottom-text">HubSpot User Group</div>
+            </div>
+            <div class="table-colonna25">
+              <img src="img\homepage_community_academy.svg" alt="academy">
+              <div class="number">248K</div>
+              <div class="bottom-text">HubSpot User Group</div>
+            </div>
+            <div class="table-colonna25">
+              <img src="img\homepage_community_inbound.svg" alt="inbound">
+              <div class="number">21K+</div>
+              <div class="bottom-text">HubSpot User Group</div>
+            </div>
+          </div>
+          <div class="table-row-two">
+            <div class="table-colonna25">
+              <img src="img\homepage_community_connect.svg" alt="connect">
+              <div class="number">6M+</div>
+              <div class="bottom-text">HubSpot User Group</div>
+            </div>
+            <div class="table-colonna25">
+              <img src="img\homepage_community_globe.svg" alt="globe">
+              <div class="number">200+</div>
+              <div class="bottom-text">HubSpot User Group</div>
+            </div>
+            <div class="table-colonna25">
+              <img src="img\homepage_community_followers.svg" alt="followers">
+              <div class="number">2.6M+</div>
+              <div class="bottom-text">HubSpot User Group</div>
+            </div>
+            <div class="table-colonna25">
+                <img src="img\growthhub-white-small-1.svg" alt="growthhub">
+              <div class="number">5K+</div>
+              <div class="bottom-text">HubSpot User Group</div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- sezione star growing divisa in due righe per due colonne ognuna -->
