terza parte del main completata

--- a/index.html
+++ b/index.html
@@ -187,27 +187,57 @@
         </div>
       </section>
       <!-- sezione star growing divisa in due righe per due colonne ognuna -->
-      <section>
+      <section class="main-third rientro">
         <!-- riga -->
-        <div>
-          <!-- colonna 1 -->
-          <div>
-
+        <div class="main-third-row-one">
+          <!-- riga 1 colonna 1 -->
+          <div class="third-one-colonna-left">
+            <div class="counter">64,500</div>
+            <p>customers in over <strong>100</strong><br>
+              countries grow their <br>
+              buisness with HubSpot.
+            </p>
           </div>
-          <!-- colonna 2 -->
-          <div>
-
+          <!-- riga 1 colonna 2 -->
+          <div class="third-one-colonna-right">
+            <div class="client-logo">
+              <img src="img/Atlassian.webp" alt="atlassian">
+            </div>
+            <div class="client-logo">
+              <img src="img\Classpass.webp" alt="classpass">
+            </div>
+            <div class="client-logo">
+              <img src="img\doordash.webp" alt="doordash">
+            </div>
+            <div class="client-logo">
+              <img src="img\g2crowd.webp" alt="g2crowd">
+            </div>
+            <div class="client-logo">
+              <img src="img\Subaru.webp" alt="subaru">
+            </div>
+            <div class="client-logo">
+              <img src="img\surveymonkey.svg" alt="surveymonkey">
+            </div>
+            <div class="client-logo">
+              <img src="img\VMware.webp" alt="vmware">
+            </div>
+            <div class="client-logo">
+              <img src="img\Wistia.webp" alt="wistia">
+            </div>
           </div>
         </div>
         <!-- riga 2-->
-        <div>
+        <div class="main-third-row-two">
           <!-- colonna 1 -->
-          <div>
-
+          <div class="third-two-colonna-left">
+            <h2>Start Growing with HubSpot Today</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="button">GetHubspotFree</div>
+            <div>Get started with FREE tools and upgrade as you grow.</div>
           </div>
           <!-- colonna 2 -->
-          <div>
-
+          <div class="third-two-colonna-right">
+            <img src="img/woman.webp" alt="woman">
           </div>
         </div>
       </section>
