--- a/index.html
+++ b/index.html
@@ -243,45 +243,85 @@
       </section>
     </main>
     <!-- footer diviso in due righe la prima con 4 colonne di link la seconda con le lingue copyright e legal -->
-    <footer>
+    <footer class="rientro">
       <!-- sezione link -->
-      <section>
+      <section class="footer-top">
         <!-- divisa in 4 colonne -->
-        <div>
-
+        <div class="footer-list">
+          <ul>
+            <li>Increase your traffic</li>
+            <li><a href="#">Ad Software</a></li>
+            <li><a href="#">Blog Software</a></li>
+            <li><a href="#">SEO Software</a></li>
+            <li><a href="#">Social Media Software</a></li>
+            <li><a href="#">Content Managment Software</a></li>
+          </ul>
         </div>
         <!-- colonna 2 -->
-        <div>
-
+        <div class="footer-list">
+          <ul>
+            <li>Increase your traffic</li>
+            <li><a href="#">Ad Software</a></li>
+            <li><a href="#">Blog Software</a></li>
+            <li><a href="#">SEO Software</a></li>
+            <li><a href="#">Social Media Software</a></li>
+            <li><a href="#">Content Managment Software</a></li>
+          </ul>
         </div>
         <!-- colonna 3 -->
-        <div>
-
+        <div class="footer-list">
+          <ul>
+            <li>Increase your traffic</li>
+            <li><a href="#">Ad Software</a></li>
+            <li><a href="#">Blog Software</a></li>
+            <li><a href="#">SEO Software</a></li>
+            <li><a href="#">Social Media Software</a></li>
+            <li><a href="#">Content Managment Software</a></li>
+          </ul>
         </div>
         <!-- colonna 4 -->
-        <div>
-
+        <div class="footer-list">
+          <ul>
+            <li>Increase your traffic</li>
+            <li><a href="#">Ad Software</a></li>
+            <li><a href="#">Blog Software</a></li>
+            <li><a href="#">SEO Software</a></li>
+            <li><a href="#">Social Media Software</a></li>
+            <li><a href="#">Content Managment Software</a></li>
+            <li><a class="button"href="#">Contact HubSpotSupport</a></li>
+            <li class="social-icon">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- seconda parte divisa in due righe una per cambio lingua l'altra divisa in due colonne -->
-      <section>
+      <section class="footer-bottom">
         <!-- riga lingue -->
-        <div>
-
+        <div class="footer-languages">
+          <div><a href="#">English</a></div>
+          <div><a href="#">Deutsch</a></div>
+          <div><a href="#">日本語</a></div>
+          <div><a href="#">Espanol</a></div>
+          <div><a href="#">Portogues</a></div>
+          <div><a href="#">Francais</a></div>
         </div>
         <!-- riga legal -->
-        <div>
-          <div>
-
+        <div class="footer-legal">
+          <div class="footer-legal-logo">
+            <img src="img\HSLogo_gray.svg" alt="logogrey">
+            <div>copyright @ 2019 HubSpot, Inc</div>
           </div>
-          <div>
-
+          <div class="footer-legal-right">
+            <a href="#">Legal Stuff</a>
+            <a href="#">Privacy Policy</a>
           </div>
         </div>
       </section>
-
-
-
     </footer>
   </body>
 </html>
