pulizia e qualche dettagli

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <!-- barra search e login con position fixed -->
     <nav class="barra-login rientro">
       <div class="nav-globe">
-        <a>
-          <i class="fas fa-globe-europe"></i>
-          English
-          <i class="fas fa-caret-down"></i>
-        </a>
+          <a>
+            <i class="fas fa-globe-europe"></i>
+            English
+            <i class="fas fa-caret-down"></i>
+          </a>
         <span>|</span>
         <a>Contact Us</a>
       </div>
@@ -29,7 +29,7 @@
       <nav class="header-nav rientro">
         <!-- contenitore float a destra contenete il logo -->
         <div class="logocontainer">
-          <img src="img/logo.svg" alt="logo">
+          <a href="#"><img src="img/logo.svg" alt="logo"></a>
         </div>
         <!-- lista di link float a sinistra text align a destra -->
         <ul>
@@ -64,7 +64,7 @@
       <!-- sezione better together con intestazione sezione a una colonna e sezione a 3 colonne -->
       <section class="main-first rientro">
         <!-- intestazione -->
-        <div class="intestazione">
+        <div class="intestazione rowtopbottom">
           <img src="img/cube.png" alt="cubo">
           <h2>Powerful Alone. Better Together</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -92,7 +92,7 @@
           </div>
         </div>
         <!-- seconda riga con 3 blocchetti ognuno con immagine titolo testo e lista -->
-        <div class="row-two">
+        <div class="row-two rowtopbottom">
           <div class="colonna30">
             <img src="img/Marketing-Hub-Free.svg" alt="marketing">
             <h3>Marketing Hub</h3>
@@ -134,12 +134,12 @@
       <!-- sezione learn and grow con un intestazione e una griglia di dati -->
       <section class="main-second rientro">
         <!-- intestazione -->
-        <div class="main-second-intestazione">
+        <div class="main-second-intestazione rowtopbottom">
           <h2>Learn and grow with award-winning support and thriving community behind you.</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         </div>
         <!-- griglia di dati 2 righe per 4 colonne -->
-        <div class="table">
+        <div class="table rowtopbottom">
           <div class="table-row-one">
             <div class="table-colonna25">
               <img src="img\homepage_community_agency.svg" alt="agency">
@@ -189,7 +189,7 @@
       <!-- sezione star growing divisa in due righe per due colonne ognuna -->
       <section class="main-third rientro">
         <!-- riga -->
-        <div class="main-third-row-one">
+        <div class="main-third-row-one rowtopbottom">
           <!-- riga 1 colonna 1 -->
           <div class="third-one-colonna-left">
             <div class="counter">64,500</div>
@@ -227,7 +227,7 @@
           </div>
         </div>
         <!-- riga 2-->
-        <div class="main-third-row-two">
+        <div class="main-third-row-two rowtopbottom">
           <!-- colonna 1 -->
           <div class="third-two-colonna-left">
             <h2>Start Growing with HubSpot Today</h2>
@@ -245,7 +245,7 @@
     <!-- footer diviso in due righe la prima con 4 colonne di link la seconda con le lingue copyright e legal -->
     <footer class="rientro">
       <!-- sezione link -->
-      <section class="footer-top">
+      <section class="footer-top rowtopbottom">
         <!-- divisa in 4 colonne -->
         <div class="footer-list">
           <ul>
@@ -300,20 +300,20 @@
         </div>
       </section>
       <!-- seconda parte divisa in due righe una per cambio lingua l'altra divisa in due colonne -->
-      <section class="footer-bottom">
+      <section class="footer-bottom rowtopbottom">
         <!-- riga lingue -->
         <div class="footer-languages">
           <div><a href="#">English</a></div>
           <div><a href="#">Deutsch</a></div>
           <div><a href="#">日本語</a></div>
-          <div><a href="#">Espanol</a></div>
-          <div><a href="#">Portogues</a></div>
-          <div><a href="#">Francais</a></div>
+          <div><a href="#">Espan&#771;ol</a></div>
+          <div><a href="#">Portogue&#770;s</a></div>
+          <div><a href="#">Fran&#x000E7;ais</a></div>
         </div>
         <!-- riga legal -->
         <div class="footer-legal">
           <div class="footer-legal-logo">
-            <img src="img\HSLogo_gray.svg" alt="logogrey">
+            <a href="#"><img src="img\HSLogo_gray.svg" alt="logogrey"></a>
             <div>copyright @ 2019 HubSpot, Inc</div>
           </div>
           <div class="footer-legal-right">
