assegnato tag a .button

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <a>Contact Us</a>
       </div>
       <div class="nav-bottoni">
-        <a><i class="fas fa-search"></i></a>
-        <a class="button" id="specialbutton">Log In</a>
-        <a class="button">GetHubspotFree</a>
+        <a href="#"><i class="fas fa-search"></i></a>
+        <a href="#" class="button" id="specialbutton">Log In</a>
+        <a href="#" class="button">GetHubspotFree</a>
       </div>
     </nav>
     <!-- header con barra di navigazione pagine e jumbotron -->
@@ -73,9 +73,7 @@
         <div class="row-one">
           <div class="left">
             <img src="img/CRM-Illustration.svg" alt="CRM">
-            <div class="button">
-              Learn More
-            </div>
+            <a href="#" class="button">Learn More</a>
           </div>
           <div class="right">
             <h3>Free HubSpot CRM</h3>
@@ -103,7 +101,7 @@
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
             </ul>
-            <div class="button">Learn More</div>
+            <a class="button">Learn More</a>
           </div>
           <div class="colonna30">
             <img src="img/Sales-Professional-Illustration.svg" alt="marketing">
@@ -115,7 +113,7 @@
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
             </ul>
-            <div class="button">Learn More</div>
+            <a class="button">Learn More</a>
           </div>
           <div class="colonna30">
             <img src="img/Service-Hub-Illustration.svg" alt="marketing">
@@ -127,7 +125,7 @@
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
             </ul>
-            <div class="button">Learn More</div>
+            <a class="button">Learn More</a>
           </div>
         </div>
       </section>
@@ -232,7 +230,7 @@
           <div class="third-two-colonna-left">
             <h2>Start Growing with HubSpot Today</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <div class="button">GetHubspotFree</div>
+            <a href="#" class="button">GetHubspotFree</a>
             <div>Get started with FREE tools and upgrade as you grow.</div>
           </div>
           <!-- colonna 2 -->
