--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
       <!-- sezione better together con intestazione sezione a una colonna e sezione a 3 colonne -->
       <section class="main-first rientro">
         <!-- intestazione -->
-        <div class="intestazione rowtopbottom">
+        <div class="main-first-intestazione rowtopbottom">
           <img src="img/cube.png" alt="cubo">
           <h2>Powerful Alone. Better Together</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
         <!-- prima riga divisa in due colonne una con immagine e bottone l'altra con titolo testo e piccola lista puntata -->
-        <div class="row-one">
-          <div class="left">
+        <div class="first-row-one">
+          <div class="first-one-left">
             <img src="img/CRM-Illustration.svg" alt="CRM">
             <a href="#" class="button">Learn More</a>
           </div>
-          <div class="right">
+          <div class="first-one-right">
             <h3>Free HubSpot CRM</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <div class="list-title">
@@ -90,12 +90,12 @@
           </div>
         </div>
         <!-- seconda riga con 3 blocchetti ognuno con immagine titolo testo e lista -->
-        <div class="row-two rowtopbottom">
-          <div class="colonna30">
+        <div class="first-row-two rowtopbottom">
+          <div class="first-two-colonna30">
             <img src="img/Marketing-Hub-Free.svg" alt="marketing">
             <h3>Marketing Hub</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <h4 class="list-title">Popolar Features</h4>
+            <h4>Popolar Features</h4>
             <ul class="orange-list">
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
@@ -103,11 +103,11 @@
             </ul>
             <a class="button">Learn More</a>
           </div>
-          <div class="colonna30">
+          <div class="first-two-colonna30">
             <img src="img/Sales-Professional-Illustration.svg" alt="marketing">
             <h3>Sales Hub</h3>
             <p>Lorem ipsum dolor quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <h4 class="list-title">Popolar Features</h4>
+            <h4>Popolar Features</h4>
             <ul class="orange-list">
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
@@ -115,11 +115,11 @@
             </ul>
             <a class="button">Learn More</a>
           </div>
-          <div class="colonna30">
+          <div class="first-two-colonna30">
             <img src="img/Service-Hub-Illustration.svg" alt="marketing">
             <h3>Service Hub</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <h4 class="list-title">Popolar Features</h4>
+            <h4>Popolar Features</h4>
             <ul class="orange-list">
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
               <li><i class="fas fa-check-circle"></i>Lead Generation</li>
